--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"  />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 </head>
 
@@ -90,14 +94,106 @@
             <div><img src="./img/series.png" alt=""><button class="btnCarousel">shop now</button></div>
             <div><img src="./img/ultra.png" alt=""><button class="btnCarousel">shop now</button></div>
             <div><img src="./img/nike.png" alt=""><button class="btnCarousel">shop now</button></div>
-            
-          </div>
-    </section>
 
+        </div>
+    </section>
+    <main>
+        <comp-accesorios></comp-accesorios>
+        <comp-opinions></comp-opinions>
+        <comp-gallery></comp-gallery>
+
+    </main>
+
+    <div class="row m-5">
+        <div class="col-lg-4 mb-4">
+            <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage1">
+                <img class="w-100 mb-4 rounded "
+                    src="https://i.pinimg.com/564x/49/80/7f/49807f003cdbc6cb96b6113ad08bf910.jpg" alt="">
+            </a>
+        </div>
+        <div class="col-lg-4 mb-4">
+            <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage2">
+                <img class="w-100 mb-4 rounded "
+                    src="https://i.pinimg.com/564x/e4/cc/8a/e4cc8a52578aa35de9a8a916f6c5d17f.jpg" alt="">
+            </a>
+        </div>
+
+        <div class="col-lg-4 mb-4">
+            <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage3">
+                <img class="w-100 mb-4 rounded "
+                    src="https://i.pinimg.com/564x/c7/9c/05/c79c05238ff7c8eacab862c08f9d6ded.jpg" alt="">
+            </a>
+        </div>
+
+        <div class="col-lg-4 mb-4">
+            <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImage4">
+                <img class="w-100 mb-4 rounded "
+                    src="https://i.pinimg.com/564x/fb/d3/99/fbd399bcccae91696b5968cfc3a1e9e1.jpg" alt="">
+            </a>
+        </div>
+    </div>
+
+
+    <div tabindex="1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
+
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-contend">
+                <img src="https://i.pinimg.com/564x/49/80/7f/49807f003cdbc6cb96b6113ad08bf910.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div tabindex="1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
+
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-contend">
+                <img src="https://i.pinimg.com/564x/e4/cc/8a/e4cc8a52578aa35de9a8a916f6c5d17f.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <div tabindex="1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
+
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-contend">
+                <img src="https://i.pinimg.com/564x/c7/9c/05/c79c05238ff7c8eacab862c08f9d6ded.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div tabindex="1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
+
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-contend">
+                <img src="https://i.pinimg.com/564x/fb/d3/99/fbd399bcccae91696b5968cfc3a1e9e1.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <section id="menu">
+            <article>inicio</article>
+            <article>Cartelera/Programación</article>
+            <article>Próximos estrenos</article>
+            <article>Contacto</article>
+        </section>
+        <section id="descargar">
+            <h1>Descarga la App</h1>
+
+        </section>
+
+        <section id="logo">
+            <h1>Izi movie</h1>
+        </section>
+    </footer>
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+    integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script type="module" src="./index.js">
 
