--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Entrega1</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
@@ -15,6 +14,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <title>Taller 1</title>
 
 </head>
 
@@ -170,20 +170,14 @@
     </div>
 
     <footer>
-        <section id="menu">
-            <article>inicio</article>
-            <article>Cartelera/Programación</article>
-            <article>Próximos estrenos</article>
-            <article>Contacto</article>
-        </section>
         <section id="descargar">
-            <h1>Descarga la App</h1>
-
-        </section>
-
-        <section id="logo">
-            <h1>Izi movie</h1>
-        </section>
+            <div class="foot">
+                <img class="logo-footer" src="./img/logoapple.png">
+            </div>
+            <h7>Copyright© </h7>
+            
+            
+    </section>
     </footer>
 
 </body>
