--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
 
             <div class="menu-inicial">
                 <img class="logo-header" src="./img/logoapple.png">
-                <a href="#">Mac</a>
-                <a href="#">iPad</a>
-                <a href="#">iPhone</a>
-                <a href="#">AirPods</a>
-                <a href="#">Accesories</a>
+                <a href="./lista/lista.html"><button class="nav-button">Products</button></a>
+                <a href="#">Stores</a>
                 <a href="#">Support</a>
             </div>
 
